--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 html, body {
-  background: #000; 
-  font-family:"Oxygen"; 
-  font-weight:300; 
-  margin: 0;
-  padding: 0;
+    background: #000; 
+    font-family:"Oxygen"; 
+    font-weight:300; 
+    margin: 0;
+    padding: 0;
 }
 
 img {
@@ -13,11 +13,11 @@ img {
 }
 
 .header {
-  background: #000;
+    background: #000;
 }
 
 .header img {
-  margin: 40px 0;
+    margin: 40px 0;
 }
 
 .header ul {
@@ -30,40 +30,41 @@ img {
 }
 
 .main {
-  background-color: #111111;
-  background-size:141px 142px; 
-  padding: 80px;
+    background-image:url(/img/diagmonds_@2X.png);
+    background-size:141px 142px; 
+    padding: 80px;
 }
 
 .main .series {
-  color:#0393ff;
+    color:#0393ff;
 }
 
 .main .episode {
-  color: #fff;
-  font-family: "Montserrat", sans-serif;
-  margin: 0 0 40px 0;
-  text-transform: uppercase;
+    color: #fff;
+    font-family: "Montserrat", sans-serif;
+    margin: 0 0 40px 0;
+    text-transform: uppercase;
 }
 
 .main .description {
-  color: #fff;   
+    color: #fff;   
 }
 
 .main ul, .main img {
-  margin: 30px 0 0;
+    margin: 30px 0 0;
 }
 
 .main ul li {
-  background: rgba(0,0,0,0.5);
-  border: 1px solid #0393ff;
-  color: #fff;
+    background: rgba(0,0,0,0.5);
+    border: 1px solid #0393ff;
+    color: #fff;
 }
 
 .list-group-item span {
-  color:#0393ff;
-  padding:0 10px 0 0;
+    color:#0393ff;
+    padding:0 10px 0 0;
 }
+    
 
 .footer {
   background:#000;
